--- a/index.html
+++ b/index.html
@@ -134,6 +134,27 @@
             </svg>
             <div class="externalLinkLabel">La Trobe<br>University profile</div>
         </a>
+        <a href="https://www.linkedin.com/in/johnepierce/" id="linkedin" target="">
+        <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 16 16">
+                <metadata>
+                Created by potrace 1.12, written by Peter Selinger 2001-2015
+                </metadata>
+                <defs>
+                    <linearGradient id="LinkedInGradient" x1="0%" y1="50%" x2="100%" y2="50%"  >
+                        <stop offset="10%" style="stop-color:#0077b7;" />
+                        <stop offset="100%" style="stop-color:#027fc3" />
+                  </linearGradient>
+                  <mask id="LinkedInIcon">
+                    <path d="M14.49,0H1.44C.65,0,0,.65,0,1.44v13.05c0,.8.65,1.44,1.44,1.44h13.05c.8,0,1.44-.65,1.44-1.44V1.44c0-.8-.65-1.44-1.44-1.44ZM4.93,13.75c0,.23-.19.42-.42.42h-1.78c-.23,0-.42-.19-.42-.42v-7.48c0-.23.19-.42.42-.42h1.78c.23,0,.42.19.42.42v7.48ZM3.62,5.15c-.94,0-1.7-.76-1.7-1.7s.76-1.7,1.7-1.7,1.7.76,1.7,1.7-.76,1.7-1.7,1.7ZM14.26,13.79c0,.21-.17.39-.39.39h-1.92c-.21,0-.39-.17-.39-.39v-3.51c0-.52.15-2.29-1.37-2.29-1.18,0-1.42,1.21-1.47,1.76v4.05c0,.21-.17.39-.39.39h-1.85c-.21,0-.39-.17-.39-.39v-7.55c0-.21.17-.39.39-.39h1.85c.21,0,.39.17.39.39v.65c.44-.66,1.09-1.16,2.47-1.16,3.07,0,3.05,2.87,3.05,4.44v3.62h0Z" style="fill:white; stroke-width:0px;"/>
+                  </mask>
+                </defs>
+                <g mask="url('#LinkedInIcon')">
+                    <rect x="0" y="0" width="16" height="16" fill="currentColor" />
+                    <rect id="svgBase" x="0" y="0" width="16" height="16" fill="url(#LinkedInGradient)" />
+                </g>              
+                </svg>
+            <div class="externalLinkLabel">LinkedIn</div>
+        </a>
         <a href="CV.html" id="cv" target="">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                 <metadata>
