Add PALPA playlist card

--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@
                 </div>
             </a>
         </div> -->
+        <div class="Tutorials aphasia PALPA">
+            <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4&list=PLhVDZD_iZSovSQYMDkxbHTajT8oRnkH4r" target="">
+                <div class="cardUpper" style="align-content: flex-end;background: linear-gradient(135deg, rgba(123, 144, 182, 0.5), rgba(119, 166, 173, 0.5), rgba(113, 187, 130, 0.5), rgba(193, 156, 109, 0.5), rgba(169, 134, 160, 0.5));">
+                    <img src="images/PALPAthumb.jpg" alt="thumbnails of PALPA tutorial videos" style="width: 75%;margin-bottom: -2%;"/>
+                </div> 
+                <div class="cardLower">
+                    PALPA tutorials - Step-by-step video explanations of the psycholinguistic model</span>
+                </div>
+            </a>
+        </div>
         <div class="Dissemination multi-modal_aphasia_therapy_tele podcast multi-modal_aphasia_therapy">
             <a href="https://soundcloud.com/speechpathologyaustralia/multi-modality-aphasia-treatment-and-telepractice-s6e41" target="">
                 <div class="cardUpper" style="justify-content: center;">
