--- a/index.html
+++ b/index.html
@@ -251,6 +251,26 @@
                 </div>
             </a>
         </div> -->
+        <div class="Publications aphasia carers">
+            <a href="https://doi.org/10.1080/09638288.2024.2399221" target="">
+                <div class="cardUpper" >
+                    <img src="images/carerinterventions.jpg" alt="a venn diagram" style="width: 100%; margin-top: -50%;"/>
+                </div>
+                <div class="cardLower">
+                    Interventions for carers/family of people with aphasia - a review
+                </div>
+            </a>
+        </div>
+        <div class="Publications artificial_intelligence technology">
+            <a href="https://doi.org/10.3390/technologies12070111" target="">
+                <div class="cardUpper" >
+                    <img src="images/llds.png" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Improving automatic emotion detection in speech
+                </div>
+            </a>
+        </div>
         <div class="Tutorials aphasia PALPA">
             <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4&list=PLhVDZD_iZSovSQYMDkxbHTajT8oRnkH4r" target="">
                 <div class="cardUpper" style="align-content: flex-end;background: linear-gradient(135deg, rgba(123, 144, 182, 0.5), rgba(119, 166, 173, 0.5), rgba(113, 187, 130, 0.5), rgba(193, 156, 109, 0.5), rgba(169, 134, 160, 0.5));">
