--- a/CV.html
+++ b/CV.html
@@ -169,12 +169,12 @@
                     
                 </svg>pierce.john.e@gmail.com
             </a>
-            <a href="http://www.twitter.com/johnpierce85">
+            <!-- <a href="http://www.twitter.com/johnpierce85">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="inherit" viewBox="0 0 16 16">
                 <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
                 </svg>
                 @johnpierce85
-            </a>
+            </a> -->
             <a href="https://orcid.org/0000-0001-5164-5106">
                 <svg width="17" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" overflow="hidden"><defs><clipPath id="clip0"><rect x="0" y="0" width="17" height="16"/></clipPath><clipPath id="clip1"><rect x="0" y="0" width="17" height="15"/></clipPath><clipPath id="clip2"><rect x="0" y="-1" width="17" height="16"/></clipPath></defs><g clip-path="url(#clip0)"><g clip-path="url(#clip1)"><g clip-path="url(#clip2)"><path d="M9.58826 6.40425 8.21522 6.40425 8.21522 10.9975 9.63436 10.9975C11.6528 10.9975 12.117 9.46314 12.117 8.69924 12.117 7.4579 11.3235 6.40425 9.58826 6.40425ZM8.42924 1.02073C4.33645 1.02073 1.02073 4.33645 1.02073 8.42924 1.02073 12.522 4.33645 15.8378 8.42924 15.8378 12.522 15.8378 15.8378 12.522 15.8378 8.42924 15.8378 4.33645 12.522 1.02073 8.42924 1.02073ZM6.01571 11.7976 5.1234 11.7976 5.1234 5.59754 6.01571 5.59754 6.01571 11.7976ZM5.5712 4.89291C5.24852 4.89291 4.9851 4.63279 4.9851 4.30681 4.9851 3.98084 5.24523 3.72072 5.5712 3.72072 5.89388 3.72072 6.1573 3.98084 6.1573 4.30681 6.154 4.6295 5.89388 4.89291 5.5712 4.89291ZM9.74302 11.8042 7.3229 11.8042 7.3229 5.59754 9.72984 5.59754C12.0215 5.59754 13.0291 7.234 13.0291 8.69924 13.0291 10.2929 11.7878 11.8042 9.74302 11.8042Z" fill="inherit" fill-rule="nonzero" fill-opacity="1" transform="matrix(1.00839 0 0 1 0 -0.958742)"/></g></g></g></svg>
                 0000-0001-5164-5106</a>
@@ -193,8 +193,8 @@
             <span><span id="yearsPost">1</span> years post PhD</span>
             <span><span id="funding">$—</span> funding | <span id="fundingCIA">$—</span> as CIA </span>
             <span><span  id="pubsCount">—</span> publications </span>
-            <span><span>300</span> citations</span>
-            <span>H-index <span>10</span></span>
+            <span><span>320</span> citations</span>
+            <span><i>h</i>-index <span>10</span></span>
             <!-- https://www.scopus.com/authid/detail.uri?authorId=57209304655 -->
         </p>
     </div>
@@ -445,6 +445,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <!-- <p>Charalambous, M., Pastou, G., Kola, E., <b>Pierce, J. E.</b>, & Savitz, S. (early online). The Role of Speech and Language Therapists in International Stroke Teams: A systematic review. <i>International Journal of Language & Communication Disorders.</i> <a href="https://doi.org/10.1111/1460-6984.70062">https://doi.org/10.1111/1460-6984.70062</a></p> -->
             <p>
               Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (early online). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 0(0), 1–22. <a href="https://doi.org/10.1080/02687038.2024.2410766">https://doi.org/10.1080/02687038.2024.2410766</a>
             </p>
@@ -1445,6 +1446,8 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
+            <p>Invited to present in the USA's National Aphasia Association "Ask the Expert" session on AI (<a href="https://www.youtube.com/watch?v=Ru9tVrTJNqA">recording</a>).</p>
+            <p>Invited panel member - International Clinical Trials Day at La Trobe University, May 2025.</p>
             <p>Organising committee for Digital Health Week, 2025.</p>
             <p>Presented at Stroke Foundation fundraising event, March 2024</p>
             <p>Organising committee member for the Aphasiology Symposium of Australasia, Nov 2023.</p>
