June update, fix collapse mask

--- a/CV.html
+++ b/CV.html
@@ -120,6 +120,7 @@
             rightCol.classList.toggle("rightColHidden")
             const mask = rightCol.querySelector(".rightColMask")
             mask.style.opacity = mask.style.opacity === "1" ? "0" : "1";
+            mask.classList.toggle('rightColMask-show');
             if (rightCol.classList.contains("rightColHidden")) {
                 var hiddenHeight = `calc(${leftCol.querySelector('div').offsetHeight}px + 1.2rem)`;
                 rightCol.style.maxHeight = hiddenHeight;
@@ -1297,7 +1298,7 @@
             Member of:
             <ul>
                 <li>International Stroke Recovery and Rehabilitation Alliance - Emerging Leaders Group</li>
-                <li>Stroke Foundation Guidelines working group</li>
+                <li>Stroke Foundation Living Guidelines - Speech Pathology lead, aphasia working group</li>
                 <li>Affiliate - Centre of Research Excellence to Accelerate Stroke Trial Innovation and Translation</li>
                 <li>Collaboration of Aphasia Trialists (an international network of multidisciplinary aphasia investigators)
                     <ul>
@@ -1404,7 +1405,7 @@
                   <td valign=top>
                   <p><a
                   href="http://www.twitter.com/JohnPierce85">Twitter</a></p>
-                  <p>2,100 followers</p>
+                  <p>2,100 followers <i>Discontinued</i></p>
                   </td>
                  </tr>
                  <tr>
@@ -1416,7 +1417,7 @@
                   <td valign=top>
                   <p><a
                   href="https://www.youtube.com/channel/UCtigAXfJSqqiDUhNlohcVcA/featured">YouTube Channel</a> (tutorials)</p>
-                  <p>4.06K subscribers</p>
+                  <p>4.38K subscribers</p>
                   </td>
                  </tr>
                  <tr>
@@ -1517,6 +1518,7 @@
                 <li>Journal of Neurology, Neurosurgery and Psychiatry</li>
                 <li>Perspectives of the ASHA Special Interest Groups</li>
                 <li>Seminars in Speech & Language</li>
+                <li>Mayo Clinic Proceedings</li>
             </ul>
             
             <p>Presented at Parkinson’s Disease fundraising
