Add stroke team paper

--- a/CV.html
+++ b/CV.html
@@ -446,7 +446,7 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <!-- <p>Charalambous, M., Pastou, G., Kola, E., <b>Pierce, J. E.</b>, & Savitz, S. (early online). The Role of Speech and Language Therapists in International Stroke Teams: A systematic review. <i>International Journal of Language & Communication Disorders.</i> <a href="https://doi.org/10.1111/1460-6984.70062">https://doi.org/10.1111/1460-6984.70062</a></p> -->
+            <p>Charalambous, M., Pastou, G., Kola, E., <b>Pierce, J. E.</b>, & Savitz, S. (early online). The Role of Speech and Language Therapists in International Stroke Teams: A systematic review. <i>International Journal of Language & Communication Disorders.</i> <a href="https://doi.org/10.1111/1460-6984.70062">https://doi.org/10.1111/1460-6984.70062</a></p>
             <p>
               Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (early online). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 0(0), 1–22. <a href="https://doi.org/10.1080/02687038.2024.2410766">https://doi.org/10.1080/02687038.2024.2410766</a>
             </p>
