Twitter to Bluesky

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </svg>
 <!-- External links -->
     <div class="externalLinks">
-        <a href="http://www.twitter.com/johnpierce85" id="bluesky" target="_blank">
+        <a href="https://bsky.app/profile/jepierce.bsky.social" id="bluesky" target="_blank">
             <svg width="16" height="16" version="1.1" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                 <defs>
                     <linearGradient id="twitterGradient" x1="0%" y1="0%" x2="100%" y2="100%"  >
