--- a/CV.html
+++ b/CV.html
@@ -1437,7 +1437,7 @@
                  </tr>
                 </table>
             <p><b>Speech Pathology Australia Podcast episode</b>: <a href="https://soundcloud.com/speechpathologyaustralia/multi-modality-aphasia-treatment-and-telepractice-s6e41">Multi-Modality Aphasia Treatment and Telepractice S6E41</a></p>
-            <p><b>Interview</b>: <a href="https://latrobeuni-my.sharepoint.com/:u:/g/personal/jpierce_ltu_edu_au/EbgH0LT6Hf9Ki5R7WHqyeKwBgzrNjcq7ybIAnWaydpw_Jw?e=upunQC">ABC Radio Western Plains</a></p>
+            <p><b>Interview</b>: <a href="https://latrobeuni-my.sharepoint.com/:u:/g/personal/jpierce_ltu_edu_au/EbgH0LT6Hf9Ki5R7WHqyeKwBgzrNjcq7ybIAnWaydpw_Jw?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJTdHJlYW1XZWJBcHAiLCJyZWZlcnJhbFZpZXciOiJTaGFyZURpYWxvZy1MaW5rIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXcifX0%3D&e=rikArJ">ABC Radio Western Plains</a></p>
         </div>
         <div class="clear"></div>
         <div class="leftCol">
