Add filter options

--- a/index.html
+++ b/index.html
@@ -223,13 +223,17 @@
             <a href="CV.html">CV</a>
         </div>
     </div>
-<!-- WORD CLOUD --><div id="learnAbout">Some of my work:</div>
-    <div class="wordcloud" style="display: none;">
-        
-    </div>
 <!-- CONTENT LINKS -->
+    <div class="contentHead">
+        <div id="learnAbout">Some of my work:</div>
+        <div id="filterButton">
+           <svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 51.02 51.02"><path d="M15.78,10.1c-.74,0-1.4.35-1.84.88h3.67c-.44-.53-1.09-.88-1.84-.88Z" style="fill:none; stroke-width:0px;"/><path d="M15.78,14.86c.74,0,1.4-.35,1.84-.88h-3.67c.44.53,1.09.88,1.84.88Z" style="fill:none; stroke-width:0px;"/><path d="M10.4,12.48h-5.34,5.34c0-.52.1-1.02.24-1.5h-5.58c-.83,0-1.5.67-1.5,1.5s.67,1.5,1.5,1.5h5.58c-.14-.48-.24-.98-.24-1.5h0Z" style="stroke-width:0px;"/><path d="M45.96,10.98h-25.04c.14.48.24.98.24,1.5h24.8-24.8c0,.52-.1,1.02-.24,1.5h25.04c.83,0,1.5-.67,1.5-1.5s-.67-1.5-1.5-1.5Z" style="stroke-width:0px;"/><path d="M15.78,10.1c.74,0,1.4.35,1.84.88h3.31c-.65-2.24-2.7-3.88-5.14-3.88s-4.49,1.65-5.14,3.88h3.31c.44-.53,1.09-.88,1.84-.88Z" style="stroke-width:0px;"/><path d="M15.78,14.86c-.74,0-1.4-.35-1.84-.88h-3.31c.65,2.24,2.7,3.88,5.14,3.88s4.49-1.65,5.14-3.88h-3.31c-.44.53-1.09.88-1.84.88Z" style="stroke-width:0px;"/><path d="M13.4,12.48c0-.57.21-1.09.55-1.5h-3.31c-.14.48-.24.98-.24,1.5h3Z" style="stroke-width:0px;"/><path d="M21.17,12.48h-3c0,.57-.21,1.09-.55,1.5h3.31c.14-.48.24-.98.24-1.5h0Z" style="stroke-width:0px;"/><path d="M13.4,12.48h0s-3,0-3,0h0c0,.52.1,1.02.24,1.5h3.31c-.34-.41-.55-.93-.55-1.5Z" style="stroke-width:0px;"/><path d="M18.17,12.48h3c0-.52-.1-1.02-.24-1.5h-3.31c.34.41.55.93.55,1.5Z" style="stroke-width:0px;"/><path d="M37.02,22.52c-.74,0-1.4.35-1.84.88h3.67c-.44-.53-1.09-.88-1.84-.88Z" style="fill:none; stroke-width:0px;"/><path d="M37.02,27.29c.74,0,1.4-.35,1.84-.88h-3.67c.44.53,1.09.88,1.84.88Z" style="fill:none; stroke-width:0px;"/><path d="M31.63,24.9H5.06h26.57c0-.52.1-1.02.24-1.5H5.06c-.83,0-1.5.67-1.5,1.5s.67,1.5,1.5,1.5h26.81c-.14-.48-.24-.98-.24-1.5h0Z" style="stroke-width:0px;"/><path d="M45.96,23.4h-3.8c.14.48.24.98.24,1.5h3.57-3.57c0,.52-.1,1.02-.24,1.5h3.8c.83,0,1.5-.67,1.5-1.5s-.67-1.5-1.5-1.5Z" style="stroke-width:0px;"/><path d="M37.02,27.29c-.74,0-1.4-.35-1.84-.88h-3.31c.65,2.24,2.7,3.88,5.14,3.88s4.49-1.65,5.14-3.88h-3.31c-.44.53-1.09.88-1.84.88Z" style="stroke-width:0px;"/><path d="M37.02,22.52c.74,0,1.4.35,1.84.88h3.31c-.65-2.24-2.7-3.88-5.14-3.88s-4.49,1.65-5.14,3.88h3.31c.44-.53,1.09-.88,1.84-.88Z" style="stroke-width:0px;"/><path d="M34.63,24.9c0-.57.21-1.09.55-1.5h-3.31c-.14.48-.24.98-.24,1.5h3Z" style="stroke-width:0px;"/><path d="M34.63,24.9h0s-3,0-3,0h0c0,.52.1,1.02.24,1.5h3.31c-.34-.41-.55-.93-.55-1.5Z" style="stroke-width:0px;"/><path d="M42.4,24.9h-3c0,.57-.21,1.09-.55,1.5h3.31c.14-.48.24-.98.24-1.5h0Z" style="stroke-width:0px;"/><path d="M39.4,24.9h3c0-.52-.1-1.02-.24-1.5h-3.31c.34.41.55.93.55,1.5Z" style="stroke-width:0px;"/><path d="M25.51,34.94c-.74,0-1.4.35-1.84.88h3.67c-.44-.53-1.09-.88-1.84-.88Z" style="fill:none; stroke-width:0px;"/><path d="M25.51,39.71c.74,0,1.4-.35,1.84-.88h-3.67c.44.53,1.09.88,1.84.88Z" style="fill:none; stroke-width:0px;"/><path d="M45.96,35.83h-15.31c.14.48.24.98.24,1.5h0s15.07,0,15.07,0h-15.07c0,.52-.1,1.02-.24,1.5h15.31c.83,0,1.5-.67,1.5-1.5s-.67-1.5-1.5-1.5Z" style="stroke-width:0px;"/><path d="M5.06,37.33h15.07c0-.52.1-1.02.24-1.5H5.06c-.83,0-1.5.67-1.5,1.5s.67,1.5,1.5,1.5h15.31c-.14-.48-.24-.98-.24-1.5H5.06Z" style="stroke-width:0px;"/><path d="M25.51,39.71c-.74,0-1.4-.35-1.84-.88h-3.31c.65,2.24,2.7,3.88,5.14,3.88s4.49-1.65,5.14-3.88h-3.31c-.44.53-1.09.88-1.84.88Z" style="stroke-width:0px;"/><path d="M25.51,34.94c.74,0,1.4.35,1.84.88h3.31c-.65-2.24-2.7-3.88-5.14-3.88s-4.49,1.65-5.14,3.88h3.31c.44-.53,1.09-.88,1.84-.88Z" style="stroke-width:0px;"/><path d="M23.13,37.33h-3c0,.52.1,1.02.24,1.5h3.31c-.34-.41-.55-.93-.55-1.5Z" style="stroke-width:0px;"/><path d="M27.89,37.33c0,.57-.21,1.09-.55,1.5h3.31c.14-.48.24-.98.24-1.5h-3Z" style="stroke-width:0px;"/><path d="M20.13,37.33h3c0-.57.21-1.09.55-1.5h-3.31c-.14.48-.24.98-.24,1.5h0Z" style="stroke-width:0px;"/><path d="M27.89,37.33h0s3,0,3,0h0c0-.52-.1-1.02-.24-1.5h-3.31c.34.41.55.93.55,1.5Z" style="stroke-width:0px;"/></svg>
+            <div id="filter">Filter</div>
+        </div>
+    </div>
     <div class="contentlinks">
-        <div class="Research multi-modal_aphasia_therapy aphasia">
+        <div class="wordcloud" ></div>
+        <div class="Multi-Modal_Aphasia_Therapy Telerehabilitation aphasia Current_research">
             <a href="http://mmat.rehab" target="">
                 <div class="cardUpper" >
                     <img src="images/MMATTele.jpg" alt="" style="width: 100%;"/>
@@ -261,7 +265,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications artificial_intelligence technology">
+        <div class="Publications Artificial_Intelligence technology">
             <a href="https://doi.org/10.3390/technologies12070111" target="">
                 <div class="cardUpper" >
                     <img src="images/llds.png" alt="" style="width: 100%;"/>
@@ -271,7 +275,7 @@
                 </div>
             </a>
         </div>
-        <div class="Tutorials aphasia PALPA">
+        <div class="Tutorials Videos aphasia PALPA">
             <a href="https://www.youtube.com/watch?v=tRHHD4KsFP4&list=PLhVDZD_iZSovSQYMDkxbHTajT8oRnkH4r" target="">
                 <div class="cardUpper" style="align-content: flex-end;background: linear-gradient(135deg, rgba(123, 144, 182, 0.5), rgba(119, 166, 173, 0.5), rgba(113, 187, 130, 0.5), rgba(193, 156, 109, 0.5), rgba(169, 134, 160, 0.5));">
                     <img src="images/PALPAthumb.jpg" alt="thumbnails of PALPA tutorial videos" style="width: 75%;margin-bottom: -2%;"/>
@@ -281,7 +285,7 @@
                 </div>
             </a>
         </div>
-        <div class="Dissemination multi-modal_aphasia_therapy_tele podcast multi-modal_aphasia_therapy">
+        <div class="Multi-Modal_Aphasia_Therapy Telerehabilitation Artificial_Intelligence">
             <a href="https://soundcloud.com/speechpathologyaustralia/multi-modality-aphasia-treatment-and-telepractice-s6e41" target="">
                 <div class="cardUpper" style="justify-content: center;">
                     <img src="images/SpeakUpLogo.jpg" alt="" style="width: 50%;"/>
@@ -291,7 +295,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications multi-modal_aphasia_therapy_tele aphasia telehealth co-design">
+        <div class="Publications Multi-Modal_Aphasia_Therapy aphasia Telerehabilitation co-design">
             <a href="https://doi.org/10.1080/17483107.2024.2366423" target="">
                 <div class="cardUpper" >
                     <img src="images/MMATTeleHome.jpg" alt="" style="width: 100%;margin-top: -2.6rem;"/>
@@ -301,7 +305,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications fatigue aphasia constraint-induced_aphasia_therapy multi-modal_aphasia_therapy">
+        <div class="Publications fatigue aphasia Constraint-Induced_Aphasia_Therapy Multi-Modal_Aphasia_Therapy Dose_and_Intensity">
             <a href="fatigue.html" target="">
                 <div class="cardUpper" >
                     <img src="images/fatiguevisualabstract.jpg" alt="" style="width: 100%;"/>
@@ -321,7 +325,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia cost-effectiveness multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
+        <div class="Publications aphasia cost-effectiveness Dose_and_Intensity Multi-Modal_Aphasia_Therapy Constraint-Induced_Aphasia_Therapy">
             <a href="https://doi.org/10.1161/STROKEAHA.123.045183" target="">
                 <div class="cardUpper" >
                     <img src="images/costeffectiveness.jpg" alt="" style="width: 100%;"/>
@@ -331,7 +335,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia intensity ICAPs">
+        <div class="Publications aphasia Dose_and_Intensity ICAPs">
             <a href="papers/2024 The I in ICAPs - Examining Treatment Intensity Under the microscope (accepted manuscript).pdf" target="">
                 <div class="cardUpper" >
                     <img src="images/MDAFschematic.jpg" alt="" style="width: 100%;"/>
@@ -341,7 +345,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia technology artificial_intelligence AI_images">
+        <div class="aphasia technology Artificial_Intelligence">
             <a href="AI_images.html" target="">
                 <div class="cardUpper" >
                     <img src="images/AIimages/waterfall.jpg" alt="AI generated image of a waterfall" style="width: 100%;"/>
@@ -351,7 +355,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia technology artificial_intelligence">
+        <div class="Publications aphasia technology Artificial_Intelligence">
             <a href="https://www.tandfonline.com/doi/epdf/10.1080/09638288.2023.2199463" target="">
                 <div class="cardUpper" >
                     <img src="images/AIdoughnut.jpg" alt="" style="width: 110%;margin-top: -1.2rem;"/>
@@ -361,7 +365,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia aphasia aphasia-friendly_videos video_abstracts">
+        <div class="Publications aphasia aphasia Aphasia-Friendly_Videos ">
             <a href="videopreferences.html" target="">
                 <div class="cardUpper" style="background-color: #e6e6e6;">
                     <img src="images/videoabstractinfographic.jpg" alt="" style="width: 100%;margin-top: -20rem;rotate: 45deg;"/>
@@ -371,7 +375,7 @@
                 </div>
             </a>
         </div>
-        <div class="Project_and_tools aphasia technology">
+        <div class="aphasia technology Artificial_Intelligence">
             <a href="https://rbcavanaugh.github.io/aphasia-tech-map/" target="">
                 <div class="cardUpper" >
                     <img src="images/techmap.png" alt="" style="width: 110%;"/>
@@ -381,7 +385,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
+        <div class="Publications aphasia Multi-Modal_Aphasia_Therapy Constraint-Induced_Aphasia_Therapy Dose_and_Intensity">
             <a href="https://www.tandfonline.com/doi/epdf/10.1080/10749357.2023.2196765" target="">
                 <div class="cardUpper" >
                     <img src="images/substudytimeline.png" alt="" style="height: 9rem;"/>
@@ -392,7 +396,7 @@
                 </div>
             </a>
         </div>
-        <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
+        <div class="Publications aphasia Multi-Modal_Aphasia_Therapy Constraint-Induced_Aphasia_Therapy">
             <a href="http://dx.doi.org/10.1136/jnnp-2021-328422" target="">
                 <div class="cardUpper" style="background-color: #2490b0;grid-template-columns: 1.5fr 1fr;">
                     <img src="images/compare logo.png" alt="logo for the COMPARE aphasia trial" style="height: 7rem;justify-self: right;"/>
@@ -407,7 +411,7 @@
                 </div>
             </a>
         </div>
-        <div class="Tutorials dysarthria">
+        <div class="Tutorials Videos dysarthria">
             <a href="https://www.youtube.com/playlist?list=PLhVDZD_iZSouPkLjPXaWUx0jnX_ikT8EY" target="">
                 <div class="cardUpper">
                     <img src="images/dysarthriatutorialthumbs.png" alt="thumbnails of dysarthria tutorial videos"/>
@@ -427,7 +431,7 @@
                 </div>
             </a>
         </div>
-        <div class="Projects_and_tools Tutorials aphasia aphasia-friendly_videos video_abstracts">
+        <div class="Tutorials Videos aphasia Aphasia-Friendly_Videos ">
             <a href="https://www.aphasiatrials.org/aphasia-friendly-video-abstract-project/" target="" style="grid-template-columns: 1fr 2fr;">
                 <div class="cardUpper" style="background-color:#ace0cb;grid-template-columns: 2fr 1fr 2fr;">
                     <img src="images/document.png" alt="icon of paper document" style="max-height: 4rem;justify-self: right;">
@@ -443,7 +447,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia dose/intensity Publications">
+        <div class="aphasia Dose_and_Intensity Publications">
             <a href="papers/Harvey et al 2022_Dose frameworks_accepted.pdf" target="">
                 <div class="cardUpper" >
                     <img src="images/MDAFcropped.png" alt="cropped blue and white figure" style="max-height: 12rem"/>
@@ -453,7 +457,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia maintenance Publications">
+        <div class="aphasia Videos maintenance Publications">
             <a href="maintenance.html" target="">
                 <div class="cardUpper" >
                     <img src="images/maintenanceThumbnail.jpg" alt="" style="height: 8rem;"/>
@@ -464,7 +468,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia dose/intensity Publications">
+        <div class="aphasia Dose_and_Intensity Publications">
             <a href="papers/Pierce et al Intensity review Accepted.pdf" target="">
                 <div class="cardUpper" style="background-color: white;grid-template-columns: 1fr 1fr;">
                     <img src="images/higherlowerweekly.png" alt="" style="height: 7rem;"/>
@@ -475,7 +479,7 @@
                 </div>
             </a>
         </div>
-        <div class="aphasia Publications multi-modal_aphasia_therapy Presentations multimodal">
+        <div class="aphasia Publications Multi-Modal_Aphasia_Therapy Presentations multimodal Videos">
             <a href="multimodaltherapy.html" target="">
                 <div class="cardUpper" >
                     <img src="images/multimodaltherapy.jpg" alt="" style="width: 70%; margin-top:-0.5rem"/>
