--- a/index.html
+++ b/index.html
@@ -255,6 +255,38 @@
                 </div>
             </a>
         </div> -->
+        <div class="Publications groups">
+            <a href="https://doi.org/10.1080/02687038.2024.2410766" target="">
+                <div class="cardUpper" >
+                    <img src="images/aphasia_group.jpg" alt="" style="max-width: 100%;height: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Groups run by people with aphasia, supported by clinicians
+                    <br><span style="font-weight: 300;">[pilot trial]</span>
+                </div>
+            </a>
+        </div>
+        <div class="Publications clinical_care">
+            <a href="https://onlinelibrary.wiley.com/doi/10.1111/hex.14173" target="">
+                <div class="cardUpper" >
+                    <img src="images/priorities_map.jpg" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Top 11 priorities for improving aphasia care
+                </div>
+            </a>
+        </div>
+        <div class="Videos Artificial_Intelligence">
+            <a href="https://www.youtube.com/watch?v=Ru9tVrTJNqA" target="">
+                <div class="cardUpper" >
+                    <img src="images/AI_aphasia_thumbnail.png" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    AI and aphasia
+                    <br><span style="font-weight: 300;">[video] Presentation to National Aphasia Association members</span>
+                </div>
+            </a>
+        </div>
         <div class="Publications aphasia carers">
             <a href="https://doi.org/10.1080/09638288.2024.2399221" target="">
                 <div class="cardUpper" >
@@ -365,6 +397,17 @@
                 </div>
             </a>
         </div>
+        <div class="Videos aphasia">
+            <a href="https://youtube.com/shorts/DNw7vyXPjN4" target="">
+                <div class="cardUpper" >
+                    <img src="images/screenshot_thumbnail.png" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Taking a screenshot with one hand
+                    <br><span style="font-weight: 300;">If your arm is affected by a stroke</span>
+                </div>
+            </a>
+        </div>
         <div class="Publications aphasia aphasia Aphasia-Friendly_Videos ">
             <a href="videopreferences.html" target="">
                 <div class="cardUpper" style="background-color: #e6e6e6;">
@@ -444,6 +487,17 @@
                 </div>
                 <div class="cardLower">
                     How to make an aphasia friendly video abstract for your research
+                </div>
+            </a>
+        </div>
+        <div class="Videos aphasia Therapy">
+            <a href="https://www.youtube.com/watch?v=W7PmQt-B3Nc" target="">
+                <div class="cardUpper" >
+                    <img src="images/aphasia_apps_thumbnail.jpg" alt="" style="width: 120%;"/>
+                </div>
+                <div class="cardLower">
+                    Aphasia therapy apps - a review
+                    <br><span style="font-weight: 300;">Aphasia friendly review (2020)</span>
                 </div>
             </a>
         </div>
