--- a/CV.html
+++ b/CV.html
@@ -446,7 +446,28 @@
             <div class="rightColMask-container">
                 <div class="rightColMask"></div>
             </div>
-            <p>Charalambous, M., Pastou, G., Kola, E., <b>Pierce, J. E.</b>, & Savitz, S. (early online). The Role of Speech and Language Therapists in International Stroke Teams: A systematic review. <i>International Journal of Language & Communication Disorders.</i> <a href="https://doi.org/10.1111/1460-6984.70062">https://doi.org/10.1111/1460-6984.70062</a></p>
+            <p>
+                Zingelman, S., Wallace, S. J., Kim, J., Harvey, S., Rose, M. L., <b>Pierce, J. E.</b>, Bagot, K., & Cadilhac, D. A. (2025). Aphasia-specific or generic outcomes? a comparison of two health-related quality of life instruments for economic evaluations of aphasia treatments. <i>Quality of Life Research</i>. <a href="https://doi.org/10.1007/s11136-025-04040-8">https://doi.org/10.1007/s11136-025-04040-8</a>
+            </p>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1007/s11136-025-04040-8"></div>
+                        </td>
+                    </tr>
+                </table>
+            <p>Charalambous, M., Pastou, G., Kola, E., <b>Pierce, J. E.</b>, & Savitz, S. (2025). The Role of Speech and Language Therapists in International Stroke Teams: A systematic review. <i>International Journal of Language & Communication Disorders, 60</i>(4), e70062. <a href="https://doi.org/10.1111/1460-6984.70062">https://doi.org/10.1111/1460-6984.70062</a>
+            </p>
+                <table>
+                    <tr>
+                        <td>
+                            <div class='altmetric-embed altmetric' data-badge-type='donut' data-doi="10.1111/1460-6984.70062"></div>
+                        </td>
+                        <td class="citationcell" >
+                            1 citation
+                        </td>
+                    </tr>
+            </table>
             <p>
               Rose, M. L., Wilcox, C., Attard, M., <b>Pierce, J. E.</b>, Shiggins, C., Lanyon, L., Wong, D., Fenner, P., & Carragher, M. (early online). Acceptability, feasibility and preliminary efficacy of the Peer-led Hub-and-Spoke Community Aphasia Group program. Aphasiology, 0(0), 1–22. <a href="https://doi.org/10.1080/02687038.2024.2410766">https://doi.org/10.1080/02687038.2024.2410766</a>
             </p>
