--- a/index.html
+++ b/index.html
@@ -255,6 +255,26 @@
                 </div>
             </a>
         </div> -->
+        <div class="Publications aphasia cost-effectiveness" >
+            <a href="https://doi.org/10.1007/s11136-025-04040-8" target="">
+                <div class="cardUpper" >
+                    <img src="images/qol_tools.webp" alt="" style="width: 98%; margin-top: -3rem;"/>
+                </div>
+                <div class="cardLower">
+                    Comparison of two quality of life instruments in aphasia
+                </div>
+            </a>
+        </div>
+        <div class="Publications international stroke">
+            <a href="https://doi.org/10.1111/1460-6984.70062" target="">
+                <div class="cardUpper" >
+                    <img src="images/flags.webp" alt="" style="width: 120%; filter:saturate(0.7)"/>
+                </div>
+                <div class="cardLower">
+                    Access to speech pathology after a stroke is not the same across the world
+                </div>
+            </a>
+        </div>
         <div class="Publications groups">
             <a href="https://doi.org/10.1080/02687038.2024.2410766" target="">
                 <div class="cardUpper" >
