Add Malaysia paper

--- a/CV.html
+++ b/CV.html
@@ -447,6 +447,9 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
+                Lee, S. E., Hernandez, N. J., Hassan, F. H., Pierce, J. E., Rose, M. L., & Hill, A. J. (In Press). Rehabilitation and self-management support for people with aphasia and cognitive communication disability in Malaysia: a scoping review. <i>Disability and Rehabilitation.</i>
+            </p>
+            <p>
                 Zingelman, S., Wallace, S. J., Kim, J., Harvey, S., Rose, M. L., <b>Pierce, J. E.</b>, Bagot, K., & Cadilhac, D. A. (2025). Aphasia-specific or generic outcomes? a comparison of two health-related quality of life instruments for economic evaluations of aphasia treatments. <i>Quality of Life Research</i>. <a href="https://doi.org/10.1007/s11136-025-04040-8">https://doi.org/10.1007/s11136-025-04040-8</a>
             </p>
                 <table>
@@ -482,7 +485,7 @@
                     </tr>
               </table>
             <p>
-              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. Disability and Rehabilitation, 1–12. <a href="https://doi.org/10.1080/09638288.2024.2399221">https://doi.org/10.1080/09638288.2024.2399221</a>
+              Hernandez, N. J., Pettigrove, K., Mellahn, K., Isaksen, J. K., <b>Pierce, J. E.</b>, & Rose, M. L. (2024). Carers in post-stroke aphasia: a scoping review of interventions and outcomes beyond communication partner training. <i>Disability and Rehabilitation, 47</i>(10). <a href="https://doi.org/10.1080/09638288.2024.2399221">https://doi.org/10.1080/09638288.2024.2399221</a>
             </p>
             <table>
                     <tr>
@@ -492,7 +495,7 @@
                     </tr>
               </table>
             <p>
-              Shrubsole, K., Stone, M., Cadilhac, D. A., Kilkenny, M. F., Power, E., Lynch, E., <b>Pierce, J. E.</b>, Copland, D., Godecke, E., Burton, B., Brogan, E. & Wallace, S. J. (2024). Establishing Quality Indicators and Implementation Priorities for Post-Stroke Aphasia Services Through End-User Involvement. Health expectations: an international journal of public participation in health care and health policy, 27(5), e14173. <a href='https://doi.org/10.1111/hex.14173'>https://doi.org/10.1111/hex.14173</a>
+              Shrubsole, K., Stone, M., Cadilhac, D. A., Kilkenny, M. F., Power, E., Lynch, E., <b>Pierce, J. E.</b>, Copland, D., Godecke, E., Burton, B., Brogan, E. & Wallace, S. J. (2024). Establishing Quality Indicators and Implementation Priorities for Post-Stroke Aphasia Services Through End-User Involvement. <i>Health expectations: an international journal of public participation in health care and health policy, 27</i>(5), e14173. <a href='https://doi.org/10.1111/hex.14173'>https://doi.org/10.1111/hex.14173</a>
             </p>
               <table>
                   <tr>
