Add free paper link

--- a/PPAgroups.html
+++ b/PPAgroups.html
@@ -64,8 +64,8 @@
     <h1>Review of the evidence for groups in Primary Progressive Aphasia</h1>
     <h3>Miyuki Watanabe, Jade Cartwright, John E. Pierce</h3>
     <div style="text-align: center;">
-        <a href="papers/##SELFHOSTED##.pdf" div class="paperbutton" style="display: none;">
-            <img class="pdfsvg" src="images/pdf_light.svg">Author PDF
+        <a href="https://onlinelibrary.wiley.com/share/author/QPBB44WM3ZN2NJIZFJRT?target=10.1111/1460-6984.13031" div class="paperbutton" style="">
+            <img class="pdfsvg" src="images/pdf_light.svg">PDF access (read only)
         </a>
         <a href="https://doi.org/10.1111/1460-6984.13031" div class="paperbutton">
             <img class="pdfsvg" src="images/pdf_light.svg" style="height: calc(1rem*4/3);">
