--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </a>
         </div>
         <div class="Publications aphasia ICAPs">
-            <a href="https://doi.org/10.1080/09638288.2021.1948621" target="">
+            <a href="papers/2020 ICAP Survey Accepted Manuscript.pdf" target="">
                 <div class="cardUpper" style="background-color: white;">
                     <img src="images/ICAPs survey.png" alt="" style="width: 100%;margin-top: -7.8rem; background-color: white;"/>
                 </div>
