--- a/CV.html
+++ b/CV.html
@@ -447,7 +447,10 @@
                 <div class="rightColMask"></div>
             </div>
             <p>
-                Lee, S. E., Hernandez, N. J., Hassan, F. H., Pierce, J. E., Rose, M. L., & Hill, A. J. (In Press). Rehabilitation and self-management support for people with aphasia and cognitive communication disability in Malaysia: a scoping review. <i>Disability and Rehabilitation.</i> <a href='https://doi.org/10.1080/09638288.2025.2540502'>https://doi.org/10.1080/09638288.2025.2540502</a>
+              Aston, V., Eley, E., Wong, D., Hill, A., Carragher, M., Rose, M., Pitt, R., & <b>Pierce, J. E.</b> (In Press). Telerehabilitation delivery of multi-modality aphasia therapy (M-MAT Tele): A pilot feasibility trial. <i>International Journal of Telerehabilitation</i>.
+            </p>
+            <p>
+                Lee, S. E., Hernandez, N. J., Hassan, F. H., <b>Pierce, J. E.</b>, Rose, M. L., & Hill, A. J. (In Press). Rehabilitation and self-management support for people with aphasia and cognitive communication disability in Malaysia: a scoping review. <i>Disability and Rehabilitation.</i> <a href='https://doi.org/10.1080/09638288.2025.2540502'>https://doi.org/10.1080/09638288.2025.2540502</a>
             </p>
             <p>
                 Zingelman, S., Wallace, S. J., Kim, J., Harvey, S., Rose, M. L., <b>Pierce, J. E.</b>, Bagot, K., & Cadilhac, D. A. (2025). Aphasia-specific or generic outcomes? a comparison of two health-related quality of life instruments for economic evaluations of aphasia treatments. <i>Quality of Life Research</i>. <a href="https://doi.org/10.1007/s11136-025-04040-8">https://doi.org/10.1007/s11136-025-04040-8</a>
